--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,7 +1,16 @@
 {
     "recommendations": [
-        "ms-python.python",
         "formulahendry.code-runner",
-        "ms-toolsai.jupyter"
+        "ms-toolsai.jupyter",
+        "ms-toolsai.vscode-jupyter-cell-tags",
+        "ms-python.isort",
+        "ms-python.vscode-pylance",
+        "ms-toolsai.vscode-jupyter-slideshow",
+        "ms-vscode-remote.remote-containers",
+        "ms-vscode-remote.remote-ssh",
+        "ms-vscode-remote.remote-ssh-edit",
+        "ms-vscode-remote.vscode-remote-extensionpack",
+        "ms-vscode.remote-explorer",
+        "ms-vscode-remote.remote-wsl"
     ]
 }
